Fix z-index of image breaking, accidentally removed some styling attributes a few commits back.

--- a/css/myWork.css
+++ b/css/myWork.css
@@ -92,6 +92,14 @@ ul {
 
 /* carousels */
 
+.slides {
+  display: flex;
+  max-height: calc((100vh / 12) * 9);
+  margin-top: calc(100vh / 12);
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .slides img {
   width: calc(((100vw / 12) * 3));
   max-width: 550px;
